# MetersData

./: .gitignore  1234.txt  CMakeLists.txt  README.md  asdasd.txt  asdassd.txt  jlkjlkj 2.csv  jlkjlkj.csv  ыва.md
.cache/clangd/index/: ConsoleInterface.cpp.FA6D9E3AA0074D3D.idx  ConsoleInterface.h.DB9AC5A93EF608DA.idx  Date.cpp.5EB49542B01A9B98.idx  Date.h.B06A533FA1DA8989.idx  Date.h.D8B58BA97D6A6BA0.idx  IMeterParser.h.724945840566F76F.idx  IMeterParser.h.901437AE2F4A98E4.idx  Meter.cpp.8AC0E7ADDA6FD120.idx  Meter.h.1C32C9FE9B0D27C4.idx  Meter.h.8C9E4905AB528544.idx  StringMeterParser.cpp.DC5EC2FF602F478A.idx  StringMeterParser.cpp.FC5FD05076DF4E16.idx  StringMeterParser.h.4AA3F1BC8BACBDC0.idx  StringMeterParser.h.D1697B736EE72527.idx  Validator.cpp.C839C3584FDE1844.idx  Validator.cpp.E5D3EA3C905A5A5E.idx  Validator.h.1E73C02622950572.idx  Validator.h.8F5871887A636740.idx  main.cpp.87FF73C435E63BA2.idx
external_libs/icu4c/lib/: libicui18n.77.1.dylib  libicuio.77.1.dylib  libicuio.dylib  libicutest.77.1.dylib  libicutest.77.dylib  libicutu.77.1.dylib  libicutu.dylib
external_libs/icu4c/lib/icu/77.1/: Makefile.inc  pkgdata.inc
external_libs/icu4c/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
forms/: AddMeterDialog.ui  mainwindow 2.ui  mainwindow.ui
include/: Date.h  IMeterParser.h  Meter.h  StringMeterParser.h  Validator.h
include/Core/: ConsoleInterface.h
include/Data/: Date.h  Meter.h
include/Parsers/: StringDateParser.h  StringMeterParser.h
include/console/: ConsoleInterface.h
include/controller/: MeterController.h
include/controllers/: MeterController.h
include/core/factory/: MeterFactory.h
include/core/file/: CsvFormat.h  FileHandler.h  IFileFormat.h  TxtFormat.h
include/core/model/: AbstractMeter.h  Date.h  ElectricityMeter.h  GasMeter.h  MeterList.h  Meters.h  WaterMeter.h
include/core/parsUtils/: CsvSplitter.h  StringSplitter.h
include/core/parser/: DateParser.h  IMeterParser.h  MeterParser.h  StringMeterParser.h  ValueParser.h
include/core/spliter/: CsvSplitter.h  ISpliter.h
include/factorys/: MeterFactory.h
include/file/: CsvFormat.h  FileHandler.h  IFileFormat.h  TxtFormat.h
include/interfaces/: IMeterParser.h
include/meters/: AbstractMeter.h  ElectricityMeter.h  MeterList.h  WaterMeter.h
include/models/: Date.h
include/parsUtils/: CsvSplitter.h  ISpliter.h  StringSplitter.h  StringValueParser.h
include/parsers/: DateParser.h  MeterParser.h
include/ui/: MainWindow.h
include/utils/: Logger.h  Utils.h  Validator.h
include/view/console/: ConsoleInterface.h
include/view/ui/: AddMeterDialog.h  MainWindow.h  MeterListView.h
include/views/: MeterListView.h
src/: CMakeLists.txt  StringMeterParser.cpp  Validator.cpp  main.cpp
src/Core/: ConsoleInterface.cpp
src/Data/: Date.cpp  Meter.cpp
src/Parsers/: StringDateParser.cpp  StringMeterParser.cpp
src/console/: ConsoleInterface.cpp
src/controller/: CMakeLists.txt  MeterController.cpp
src/controllers/: MeterController.cpp
src/core/: CMakeLists.txt
src/core/factory/: CMakeLists.txt  MeterFactory.cpp
src/core/file/: CMakeLists.txt  CsvFormat.cpp  FileHandler.cpp  TxtFormat.cpp
src/core/model/: AbstractMeter.cpp  CMakeLists.txt  Date.cpp  ElectricityMeter.cpp  GasMeter.cpp  MeterList.cpp  WaterMeter.cpp
src/core/parsUtils/: CsvSplitter.cpp  StringSplitter.cpp  StringValueParser.cpp
src/core/parser/: CMakeLists.txt  DateParser.cpp  MeterParser.cpp  StringMeterParser.cpp  StringValueParser.cpp
src/core/spliter/: CMakeLists.txt  CsvSplitter.cpp  StringSplitter.cpp
src/factorys/: MeterFactory.cpp
src/file/: CsvFormat.cpp  FileHandler.cpp  TxtFormat.cpp
src/meters/: AbstractMeter.cpp  ElectricityMeter.cpp  GasMeter.cpp  MeterList.cpp  WaterMeter.cpp
src/models/: Date.cpp
src/parsUtils/: CsvSplitter.cpp  StringSplitter.cpp  StringValueParser.cpp
src/parsers/: DateParser.cpp  MeterParser.cpp
src/ui/: MainWindow.cpp
src/utils/: CMakeLists.txt  Logger.cpp  Utils.cpp  Validator.cpp
src/view/: CMakeLists.txt
src/view/console/: ConsoleInterface.cpp
src/view/ui/: AddMeterDialog.cpp  MainWindow.cpp  MeterListView.cpp
src/views/: MeterListView.cpp
tests/: CMakeLists.txt
tests/test_controller/: CMakeLists.txt
tests/test_core/test_model/: CMakeLists.txt  test_abstractmeter.cpp  test_date.cpp  test_meter.cpp  test_meterlist.cpp
tests/test_core/test_parser/: CMakeLists.txt  test_dateparser.cpp
tests/test_core/test_spliter/: CMakeLists.txt  test_stringsplitter.cpp
tests/test_utils/: CMakeLists.txt  test_utils.cpp
